Fix DeveloperContentCard text z-index

--- a/src/index.css
+++ b/src/index.css
@@ -36,5 +36,4 @@
 
 .slide-pane__overlay.overlay-after-open {
   background-color: rgba(0, 0, 0, 0) !important;
-  z-index: 100 !important;
 }
